--- a/minha_002/style.css
+++ b/minha_002/style.css
@@ -6,8 +6,36 @@
     margin: 0px;
 }
 
+
 header{
     text-align: center;
     padding-top: 50px;
     font-size: 2em;
+}
+
+header > h1{
+    padding-bottom: 20px;
+    
+}
+
+nav{
+    padding-bottom: 20px;
+}
+
+main{
+    margin: 5px;
+    min-width: 300px;
+    max-width: 1000px;
+}
+
+main p{
+    line-height: 2em;
+    text-indent: 20px;
+    
+}
+
+a {
+    margin-right: 30px;
+    margin: 5px;
+    text-decoration: none;
 }
